SF: experimental 2600 support

--- a/globals.conf
+++ b/globals.conf
@@ -43,9 +43,8 @@ MFST = !1500+1700/35|!0/50|  ; mf ST
 ; ===========================================================================
 ; AC9 Tones
 ;
-
-AC9   = 2280/66|0/33|        ; 66/33
-AC9W  = 0/500|               ; interdigit pause, 500ms?
+AC9   = !2280/66|0/34|        ; 66/34 pip
+AC9W  = !0/500|               ; interdigit pause, 500ms?
 AC91  = ${AC9}
 AC92  = ${AC9}${AC9}
 AC93  = ${AC9}${AC9}${AC9}
@@ -56,4 +55,21 @@ AC97  = ${AC9}${AC9}${AC9}${AC9}${AC9}${AC9}${AC9}
 AC98  = ${AC9}${AC9}${AC9}${AC9}${AC9}${AC9}${AC9}${AC9}
 AC99  = ${AC9}${AC9}${AC9}${AC9}${AC9}${AC9}${AC9}${AC9}${AC9}
 AC90  = ${AC9}${AC9}${AC9}${AC9}${AC9}${AC9}${AC9}${AC9}${AC9}${AC9}
-AC9ST = 2280/100|0/500|      ; start pulse, 100ms
+AC9ST = !2280/100|0/500|      ; start pulse, 100ms
+
+; ===========================================================================
+; SF Tones
+;
+
+SF    = !2600/60|!0/40|        ; 66/34 pip
+SFW   = !0/200                 ; interdigit pause, 200ms
+SF1   = ${SF}
+SF2   = ${SF}${SF}
+SF3   = ${SF}${SF}${SF}
+SF4   = ${SF}${SF}${SF}${SF}
+SF5   = ${SF}${SF}${SF}${SF}${SF}
+SF6   = ${SF}${SF}${SF}${SF}${SF}${SF}
+SF8   = ${SF}${SF}${SF}${SF}${SF}${SF}${SF}
+SF9   = ${SF}${SF}${SF}${SF}${SF}${SF}${SF}${SF}
+SF0   = ${SF}${SF}${SF}${SF}${SF}${SF}${SF}${SF}${SF}
+
