--- a/send-vf.conf
+++ b/send-vf.conf
@@ -23,19 +23,19 @@
 ;====================================================================
 ; Local Contexts for sending in-band VF signalling
 [send-vf-dtmf]
-  exten => _X.,1,Answer()
-  exten => _X.,n,Wait(3)
-  exten => _X.,n,GoSub(dtmfer,start,1(${EXTEN}))
+  exten => _[0-9#*w].,1,Answer()
+  exten => _[0-9#*w].,n,Wait(3)
+  exten => _[0-9#*w].,n,GoSub(dtmfer,start,1(${EXTEN}))
 
 [send-vf-mf]
-  exten => _X.,1,Answer()
-  exten => _X.,n,Wait(3)
-  exten => _X.,n,GoSub(mfer,start,1(${EXTEN}))
+  exten => _[0-9w].,1,Answer()
+  exten => _[0-9w].,n,Wait(3)
+  exten => _[0-9w].,n,GoSub(mfer,start,1(${EXTEN}))
 
 [send-vf-ac9]
-  exten => _X.,1,Answer()
-  exten => _X.,n,Wait(3)
-  exten => _X.,n,GoSub(ac9er,start,1(${EXTEN}))
+  exten => _[0-9w].,1,Answer()
+  exten => _[0-9w].,n,Wait(3)
+  exten => _[0-9w].,n,GoSub(ac9er,start,1(${EXTEN}))
 
 ;====================================================================
 ; Subroutines for doing the signalling
@@ -104,7 +104,7 @@
 [ac9er]
   ; 2280Hz
   ; 100ms start pulse
-  ; 66ms/33ms per digit (100ms total)
+  ; 66ms/34ms per digit (100ms total)
 
   ; Accepts "0-9,W"
   exten => start,1,Set(number=${TOUPPER(${ARG1})})      ; Convert to upper case
@@ -139,4 +139,34 @@
   same  => n,StopPlaytones()
   same  => n,Return
 
+[sfer]
+  ; 2600Hz
+  ; 100ms start pulse
+  ; 66ms/34ms per digit (100ms total)
+
+  ; Accepts "0-9,W"
+  exten => start,1,Set(number=${TOUPPER(${ARG1})})      ; Convert to upper case
+  same  => n,Set(number=${FILTER(0-9W,${number})})      ; Filter invalid characters
+
+  same  => n,Set(c=0)
+  same  => n,Set(p=0)
+
+  same  => n,Set(numdigits=${LEN(${number})})
+  same  => n,Set(tonestring=)
+  same  => n,Set(toneduration=0)
+
+  same => n,While($[${c}<${numdigits}])
+    same => n,Set(p=$[${p}+${number:${c}:1}])
+    same => n,Set(SFnext=${SF${number:${c}:1}})
+    same => n,Set(tonestring=${tonestring}${SFnext})
+    same => n,Set(tonestring=${tonestring}${SFW})
+    same => n,Set(c=${INC(c)})
+  same => n,EndWhile
+
+  same => n,Set(toneduration=$[${SFPULSE}*${p}+200*${numdigits}]) ; TODO - this doesn't work with zeros
+
+  same => n,Playtones(${tonestring})
+  same => n,Wait($[${toneduration}/1000])
+  same => n,StopPlaytones()
+  same => n,Return
 
